chore(sonar): clear new-code maintainability smells exposed by the 1-day window
The J05 fix commit (205 new lines) shrank SonarQube's NUMBER_OF_DAYS=1 new-code
denominator, flipping new_maintainability_rating to D by surfacing pre-existing
smells inside the new-code period. Clear all 20 counted smells; every change is
behaviour-preserving:

CourtScheduleEnrichmentService (production):
- S3358: extract nested ternaries into locals (startTime fallback, anchor centre
  id, anchor hearing date, isDraft resolution via if/else)
- S6201: use instanceof pattern variables for JsonObject casts
- S1125: simplify the CROWN isPolice boolean expression

Tests (CourtScheduleEnrichmentServiceTest, ListingCommandApiTest, HearingAggregateTest):
- S5786: drop redundant public on JUnit5 test methods
- S6204: Stream.toList() instead of collect(Collectors.toList())
- S1117: rename locals that shadowed fields
- S1128: remove unused import

Unit tests green: CourtScheduleEnrichmentServiceTest 140, ListingCommandApiTest 33,
HearingAggregateTest 173, 0 failures.